[tool.poetry]
name = "coffee-app"
version = "0.1.0"
description = ""
authors = ["Uziel Linares"]
readme = "README.md"
packages = [{include = "coffee_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
